# renovaite

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml
.claude/: renovaite-engineering-standards.skill  renovaite-prd.skill  renovaite-user-scenarios.skill
.claude/agents/: code-reviewer.md  open-pr.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pr-title.yml  release-please.yml
api/: .env.example  Dockerfile  manage.py  pyproject.toml  pytest.ini
api/app/: .gitignore  api.py  settings.py  urls.py
api/renovaite/: apps.py  asgi.py  urls.py  wsgi.py
api/renovaite/api/: __init__.py
api/renovaite/migrations/: 0001_initial.py  0002_magiclinktoken_is_deleted_magiclinktoken_updated_at_and_more.py
api/renovaite/models/: __init__.py  magic_link.py
api/renovaite/schemas/: auth.py
api/renovaite/services/: magic_link.py
api/renovaite/settings/: base.py  dev.py  prod.py
api/tests/: test_api.py  test_auth.py  test_magic_link_service.py
infra/envs/prod/: main.tf  terraform.tfvars.example  variables.tf
infra/modules/ecr/: main.tf
infra/modules/github_oidc/: main.tf
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/lib/: api.test.ts  api.ts  auth.test.ts  auth.ts  errors.ts
web/src/pages/: LandingPage.test.tsx  LandingPage.tsx
web/src/routes/: LandingPage.test.tsx  LandingPage.tsx  LoginPage.test.tsx  LoginPage.tsx  VerifyPage.test.tsx  VerifyPage.tsx
web/src/types/: api.ts
