[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "django>=5.0",
  "django-ninja>=1.1",
  "django-ninja-jwt>=5.3",
  "pydantic[email]>=2.12.5",
  "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
  "pytest",
  "pytest-django",
  "ruff>=0.8.4",  # pin aligned with .pre-commit-config.yaml ruff-pre-commit rev
  "mypy",
  "django-stubs",
  "pre-commit>=4.5.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"
include = ["*.py", "**/pyproject.toml"]
exclude = [".venv"]  # same as mypy exclude
lint.extend-select = ["I", "B", "UP"]
fix = true

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [".venv","migrations"]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "renovaite.settings.dev"
